# gr8pc

./: .gitattributes  .ruff.toml  README.md  pyproject.toml
examples/server/: server.py
examples/server/proto/: example_service.proto
examples/server/service/: __init__.py  base.py  main.py  models.py
